--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
